# rigidfibers

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  fibers_runner.py
fortran/: CMakeLists.txt  assemble_matrix.incl  compute_inner_integral_analytically.incl  compute_inner_integral_numerically.incl  constants.incl  fibers.f95  sgmres.f  solve_system.incl  update_fibers.incl  update_fibers_firststep.incl  update_velocities.incl
lib/: FindMAGMA.cmake  FindOpenBlas.cmake
runner/: cuda_runner.py  fortran_runner.py
src/: CMakeLists.txt  common.h  fiberopt.h  main.cu  parameters.cc  parameters.h  performance.cc  performance.h  resources.cc  resources.h  simulation.cu  simulation.h
src/kernels/: assemble_system_1D.cu  assemble_system_2D.cu  assemble_system_3D.cu  compute_inner_integral_analytically.cu  compute_inner_integral_numerically.cu  constants.cu  reset_system.cu  reset_velocities.cu  update_fibers.cu  update_fibers_firststep.cu  update_velocities_1D.cu  update_velocities_2D.cu
src/ocl/: cldevice.cc  cldevice.h  clplatform.cc  clplatform.h  clutils.cc  clutils.h
tests/: XcT_ref100.in  XcT_ref2000.in  XcT_ring16.in  XcT_sphere500.in  config.ini  config1200.ini  config1400.ini  config400.ini  config500.ini  config600.ini  config900.ini  sphere.ini
tests/reference/100_analytic_direct/: 0_ORIENT.ref  0_POS.ref  0_ROTVel.ref  0_TRANSVel.ref  0_XVec.ref  1_BVec.ref  1_ORIENT.ref  1_POS.ref  1_ROTVel.ref  1_TRANSVel.ref  1_XVec.ref
tests/reference/100_analytic_gmres/: 0_BVec.ref  0_ORIENT.ref  0_POS.ref  0_ROTVel.ref  0_TRANSVel.ref  0_XVec.ref  1_BVec.ref  1_ORIENT.ref  1_POS.ref  1_ROTVel.ref  1_TRANSVel.ref  1_XVec.ref
tests/reference/100_numeric_direct/: 0_BVec.ref  0_ORIENT.ref  0_POS.ref  0_ROTVel.ref  0_TRANSVel.ref  0_XVec.ref  1_BVec.ref  1_ORIENT.ref  1_POS.ref  1_ROTVel.ref  1_TRANSVel.ref  1_XVec.ref
tests/reference/100_numeric_gmres/: 0_ORIENT.ref  0_POS.ref  0_ROTVel.ref  0_TRANSVel.ref  0_XVec.ref  1_BVec.ref  1_ORIENT.ref  1_POS.ref  1_ROTVel.ref  1_TRANSVel.ref  1_XVec.ref
tools/: build.sh  gen  gen.f95  gen.py  gen2.f95  gen2.py  gen3.py  gen_sphere.py  validate.py  validate_mapping.py
